--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@forzoom/vue-pressure",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "dist/vue-pressure.min.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config ./build/webpack.config.prod.js",
